added the libraries and dataset desc

--- a/index.html
+++ b/index.html
@@ -65,6 +65,28 @@
                         </p>
                     </div>
 
+                    <div id='methods'>
+                        <h1>Methods</h1>
+
+                        <p></p>
+
+                    </div>
+
+                    <div id='libraries'>
+                        <h1>Libraries</h1>
+
+                        <p>The visualization and analysis were done in Jupyter Notebooks with the help of modules such as numpy(Numerical Python),  scikit-learn and matplotlib.</p>
+
+                    </div>
+
+                    <div id='dataset'>
+                        <h1>Dataset</h1>
+
+                        <p>Wisconsin Diagnostic Breast Cancer dataset were applied to ML techniques for training.  There were 587 data points. The features of the cells in the dataset that were the following:(1)Radius,(2)perimeter,(3) permimeter, (4)area,(5)smoothness, (6) compactness, (7) concavity, (8) concave points, (9) symmetry, and (10) fractal dimension.
+                            </p>
+
+
+                    </div>
 
 
 
