--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    
     </head>
    <body>
-        <div id="main" class="ui vertical inverted left visible sidebar menu" style= "background-color: palevioletred; ">
+        <div id="main" class="ui vertical inverted left visible sidebar menu" style= "background-color: palevioletred; font-size: 30px;">
                 <a href="/"> <img src='https://sitejerk.com/images/transparent-cancer-ribbon-6.png'></a>
                 
               
