added the space infront of the paragraph

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                         <h1 > Abstract</h1>
 
                         <p>
-                                Clinical methods like diagnosis for cancer are increasingly integrating Machine Learning techniques. This be crucial in improving factors like early detection and recognition of tumors. The most common kind of cancer affecting women all over world is Breast cancer. The latest statistics show that almost 3.1 million women in the US alone have had a history of breast cancer. Most cases are caused by mutations in the Breast Cancer gene one(BRCA1) and BRCA2 gene. Early diagnosis is key to increasing survival rates. 
+                                <span class='para'></span>Clinical methods like diagnosis for cancer are increasingly integrating Machine Learning techniques. This be crucial in improving factors like early detection and recognition of tumors. The most common kind of cancer affecting women all over world is Breast cancer. The latest statistics show that almost 3.1 million women in the US alone have had a history of breast cancer. Most cases are caused by mutations in the Breast Cancer gene one(BRCA1) and BRCA2 gene. Early diagnosis is key to increasing survival rates. 
                                 <br><br>
-                                 However, it is currently challenging to classify whether the tumor is malignant or benign. Here is where Machine Learning techniques come into play. ML techniques can help improve classification accuracies in diagnosis and possibly be key to saving more lives. In this project, our main goal is to test certain ML techniques like Support Vector Mechanisms and Linear Regression to improve classification accuracy. The characteristics of different cancer cancer cells types will be used to categorize the tumors.
+                                <span class='para'></span>However, it is currently challenging to classify whether the tumor is malignant or benign. Here is where Machine Learning techniques come into play. ML techniques can help improve classification accuracies in diagnosis and possibly be key to saving more lives. In this project, our main goal is to test certain ML techniques like Support Vector Mechanisms and Linear Regression to improve classification accuracy. The characteristics of different cancer cancer cells types will be used to categorize the tumors.
 
                         </p>
                     </div>
@@ -62,7 +62,9 @@
                         <h1> Introduction</h1>
 
                         <p>
-                                Breast cancer incidence is in United States is among the highest numbers. About 12% of women in the United States will develop breast cancer over the course of her lifetime. Hence, it is a research field that has both great value and potential. The current most widely used test are mammograms. Though important, they tend produce lot of false positive results. This can lead to the patient having to undergo unnecessary tests and surgeries. The process is expensive and painful to the patient. Machine Learning is where computers are fed with data and trained to make decisions based on the information. It is currently a hot field and is being used in industries such as network security, healthcare etc. Using data science and ML techniques in medical fields might be a massive assistance to medical professionals in early detection and classification. This is due to the increasing incidence of breast cancer cases leading to more data being generated in the system. There have been prior potential studies that have shown that ML applications produced promising results. One such tool was developed by Google and helped identify metastatic breast cancer with 99% accuracy. The lymph nodes of the affected cells were analyzed for metastasis. Here, Machine Learning algorithms such as Support Vector Mechanisms(SVMS) and Linear Regression to classify cancers as benign and malignant. Applying ML techniques, we predict that we will have over 90% accuracy rate.  Therefore, displaying the crucial nature Machine Learning can play in Great Cancer cancer detection. 
+                                <span class='para'></span>Breast cancer incidence is in United States is among the highest numbers. About 12% of women in the United States will develop breast cancer over the course of her lifetime. Hence, it is a research field that has both great value and potential. The current most widely used test are mammograms. Though important, they tend produce lot of false positive results. This can lead to the patient having to undergo unnecessary tests and surgeries. The process is expensive and painful to the patient.
+                                <br><br> 
+                                <span class='para'></span>Machine Learning is where computers are fed with data and trained to make decisions based on the information. It is currently a hot field and is being used in industries such as network security, healthcare etc. Using data science and ML techniques in medical fields might be a massive assistance to medical professionals in early detection and classification. This is due to the increasing incidence of breast cancer cases leading to more data being generated in the system. There have been prior potential studies that have shown that ML applications produced promising results. One such tool was developed by Google and helped identify metastatic breast cancer with 99% accuracy. The lymph nodes of the affected cells were analyzed for metastasis. Here, Machine Learning algorithms such as Support Vector Mechanisms(SVMS) and Linear Regression to classify cancers as benign and malignant. Applying ML techniques, we predict that we will have over 90% accuracy rate.  Therefore, displaying the crucial nature Machine Learning can play in Great Cancer cancer detection. 
    
                         </p>
                     </div>
@@ -70,21 +72,24 @@
                     <div id='methods'>
                         <h1>Methods</h1>
 
-                        <p></p>
+                        <p><span class='para'></span></p>
 
                     </div>
 
                     <div id='libraries'>
                         <h1>Libraries</h1>
 
-                        <p>The visualization and analysis were done in Jupyter Notebooks with the help of modules such as numpy(Numerical Python),  scikit-learn and matplotlib.</p>
+                        <p><span class='para'></span>
+                            The visualization and analysis were done in Jupyter Notebooks with the help of modules such as numpy(Numerical Python),  scikit-learn and matplotlib.</p>
 
                     </div>
 
                     <div id='dataset'>
                         <h1>Dataset</h1>
 
-                        <p>Wisconsin Diagnostic Breast Cancer dataset were applied to ML techniques for training.  There were 587 data points. The features of the cells in the dataset that were the following:(1)Radius,(2)perimeter,(3) permimeter, (4)area,(5)smoothness, (6) compactness, (7) concavity, (8) concave points, (9) symmetry, and (10) fractal dimension.
+                        <p>
+                                <span class='para'></span>
+                            Wisconsin Diagnostic Breast Cancer dataset were applied to ML techniques for training.  There were 587 data points. The features of the cells in the dataset that were the following:(1)Radius,(2)perimeter,(3) permimeter, (4)area,(5)smoothness, (6) compactness, (7) concavity, (8) concave points, (9) symmetry, and (10) fractal dimension.
                             </p>
 
 
@@ -93,7 +98,8 @@
                     <div id="svm">
                         <h1>Machine Learning Techniques</h1>
 
-                        <p>Support Vector Machine(SVM): <br>
+                        <p><span class='para'></span>
+                            Support Vector Machine(SVM): <br>
                                 A SVM is a  supervised ML model that can perform linear or non linear classification. It is specifically constructed to minimize generalization errors. It separates the data based on finding the minimum distance of a hyperplane. This “decision boundary” is called the maximum margin hyperplane(MMH). SVMs also include single or hybrid models such as Proximal Support Vector Machine, Linear Programming Support Vector Machine to name a few. SVM are useful because they are effective high dimensional spaces, where the sample number is less than dimensions. It is also know be very memory efficient and versatile due to it’s ability of Kernel function specification. 
                                 </p>
 
