--- a/index.html
+++ b/index.html
@@ -70,14 +70,15 @@
                     </div>
 
                     <div id='methods'>
-                        <h1>Methods</h1>
+                        <h1>Methods used:</h1>
+                        <hr>
 
                         <p><span class='para'></span></p>
 
                     </div>
 
                     <div id='libraries'>
-                        <h1>Libraries</h1>
+                        <h2>Libraries</h2>
 
                         <p><span class='para'></span>
                             The visualization and analysis were done in Jupyter Notebooks with the help of modules such as numpy(Numerical Python),  scikit-learn and matplotlib.</p>
@@ -85,7 +86,7 @@
                     </div>
 
                     <div id='dataset'>
-                        <h1>Dataset</h1>
+                        <h2>Dataset</h2>
 
                         <p>
                                 <span class='para'></span>
@@ -96,7 +97,7 @@
                     </div>
 
                     <div id="svm">
-                        <h1>Machine Learning Techniques</h1>
+                        <h2>Machine Learning Techniques</h2>
 
                         <p><span class='para'></span>
                             Support Vector Machine(SVM): <br>
@@ -106,7 +107,7 @@
                     </div>
 
                     <div id='modeltraining'>
-                        <h1>Model Training</h1>
+                        <h2>Model Training</h2>
 
                         <p> <span class='para'></span>
                             We used the diagnosis(“Y”) feature from the dataset to predict the output. The remaining columns in the dataset like mean radius, mean texture etc are considered predictors. After cleaning the data, we divided the data into subsets of training and testing.  The testing model as suggested will measure the performance of the algorithm. Train_test_split modules are imported from the Scikit learn library and we split the data into 20% for training and 80% for testing. Next using the same sklearn library, we import the Support Vector Machine(SVM) modules and fit our model. A confusion matrix(another module) is used to asses the accuracy of the prediction model.
@@ -114,7 +115,7 @@
                     </div>
 
                     <div id='results'>
-                        <h1>Results</h1>
+                        <h2>Results</h2>
                         <p>
                             <span class='para'></span>
                             From our original dataset we see that there were more Benign(357) tumors than Malignant. Without doing any data cleanup, correlation between different features of tumor cells was immediately observed in the heat map. The mean texture of the malignant cells were more distorted than benign ones. After training and testing the model and running it through our SVM algorithm, we can see that our model an excellent job with it’s predictions. It predicted that returned only false positive and rest of the data was reflected our prediction. The SVM model returned a 99% accuracy and 100% precision rate for malignant tumors.
