changed the image for ribbon

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
    <body>
         <div id="main" class="ui vertical inverted left visible sidebar menu" style= "background-color: palevioletred; font-size: 30px;">
-                <a href="/"> <img src='https://sitejerk.com/images/transparent-cancer-ribbon-6.png'></a>
+                <a href="/"> <img src='https://upload.wikimedia.org/wikipedia/commons/thumb/4/40/White_ribbon.svg/474px-White_ribbon.svg.png' id='ribbon'></a>
                 
               
                 <a class="item" href="#abstract" style= "margin-top:60px;" >
